Fix README content

--- a/README.md/.gitignore
+++ b/README.md/.gitignore
@@ -1,14 +1,28 @@
-# Compiled Java class files
-*.class
+# Smart Task Planner (Java)
 
-# Log files
-*.log
+A console-based Java application to manage tasks efficiently using
+priority and deadlines. This project demonstrates strong understanding
+of Data Structures, Object-Oriented Programming, and clean code design.
 
-# IDE folders (VS Code)
-.vscode/
+## Features
+- Add tasks with priority and deadline
+- View pending tasks sorted by priority and deadline
+- Menu-driven console interface
+- Clean OOP-based design
 
-# Mac system files (if using Mac)
-.DS_Store
+## Tech Stack
+- Java
+- Data Structures (Priority Queue, Sorting)
+- OOP Principles
 
-# Temporary files
-*.tmp
+## How to Run
+1. Clone the repository
+2. Open in any Java IDE
+3. Run the Main class
+
+## Future Enhancements
+- File-based persistence
+- GUI using JavaFX
+
+## Author
+Hasini
